Add action to clean up slc9 builds

--- a/.github/workflows/clean-pr-checks.yml
+++ b/.github/workflows/clean-pr-checks.yml
@@ -26,6 +26,10 @@ name: Clean PR checks
         description: build/O2/alidist-dataflow-cs8
         type: boolean
         default: true
+      'check_build/O2/alidist-slc9-x86':
+        description: build/O2/alidist-slc9-x86
+        type: boolean
+        default: true
       'check_build/O2/alidist-ubuntu2204':
         description: build/O2/alidist-ubuntu2204
         type: boolean
